--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: tigernodesofspace
     restart: always
     build: .
+    image: tigernodesofspace
     ports:
       - '5000:5000'
 
